--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/e66tM5YOawXLxhDAfWkR7sxpb3h.jpg" alt="The Batman">
+                <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
 </body>
 
 </html>
