--- a/index.html
+++ b/index.html
@@ -28,13 +28,131 @@
     <main>
         <section id="dsmovie-card-list" class="container">
 
-            <div class="dsmovie-card">
-                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/e66tM5YOawXLxhDAfWkR7sxpb3h.jpg" alt="The Batman">
-                <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+            <div class="row">
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/e66tM5YOawXLxhDAfWkR7sxpb3h.jpg" alt="The Batman">
+                        <div class="dsmovie-card-description">
+                            <h3>The Batman</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/1WTKTtptVajbpuVplZAMliZeTCh.jpg" alt="Coringa">
+                        <div class="dsmovie-card-description">
+                            <h3>Coringa</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/jHxCeXnSchAuwHnmVatTgqMYdX8.jpg" alt="Homem-Aranha">
+                        <div class="dsmovie-card-description">
+                            <h3>Homem-Aranha</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sLWUtbrpiLp23a0XDSiUiltdFPJ.jpg" alt="O espetacular Homem-Aranha">
+                        <div class="dsmovie-card-description">
+                            <h3>O espetacular Homem-Aranha</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg" alt="Vingadores: Ultimato">
+                        <div class="dsmovie-card-description">
+                            <h3>Vingadores: Ultimato</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/cyecB7godJ6kNHGONFjUyVN9OX5.jpg" alt="Homem de Ferro">
+                        <div class="dsmovie-card-description">
+                            <h3>Homem de Ferro</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/hMn3BsD4s4Y8FV0kbwq8Y88EmCv.jpg" alt="Batman: O Cavaleiro das Trevas">
+                        <div class="dsmovie-card-description">
+                            <h3>Batman: O Cavaleiro das Trevas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/uhYpkLSnlOXTQDmNnu1X4MHMt1S.jpg" alt="Homem-Aranha: Sem Volta Para Casa">
+                        <div class="dsmovie-card-description">
+                            <h3>Homem-Aranha: Sem Volta Para Casa</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wpI4He62QfRK4F7njzqi0162pKC.jpg" alt="Capitão América: O Primeiro Vingador ">
+                        <div class="dsmovie-card-description">
+                            <h3>Capitão América: O Primeiro Vingador</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7FWlcZq3r6525LWOcvO9kNWurN1.jpg" alt="Capitão América: Guerra Civil">
+                        <div class="dsmovie-card-description">
+                            <h3>Capitão América: Guerra Civil</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/jqwM0nhOLEFI1HHBabwr80Od3TC.jpg" alt="Homem-Aranha no Aranhaverso">
+                        <div class="dsmovie-card-description">
+                            <h3>Homem-Aranha no Aranhaverso</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/cinER0ESG0eJ49kXlExM0MEWGxW.jpg" alt="Shang-Chi e a Lenda dos Dez Anéis">
+                        <div class="dsmovie-card-description">
+                            <h3>Shang-Chi e a Lenda dos Dez Anéis</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+ 
             </div>
+
+
 
         </section>
 
