--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/b0PlSFdDwbyK0cf5RxwDpaOJQvQ.jpg" alt="The Batman">
                         <div class="dsmovie-card-description">
                             <h3>The Batman</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +163,7 @@
  
             </div>
 
-            
+
 
         </section>
 
