Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/1WTKTtptVajbpuVplZAMliZeTCh.jpg" alt="Coringa">
                         <div class="dsmovie-card-description">
                             <h3>Coringa</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -66,7 +77,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/jHxCeXnSchAuwHnmVatTgqMYdX8.jpg" alt="Homem-Aranha">
                         <div class="dsmovie-card-description">
                             <h3>Homem-Aranha</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,7 +98,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sLWUtbrpiLp23a0XDSiUiltdFPJ.jpg" alt="O espetacular Homem-Aranha">
                         <div class="dsmovie-card-description">
                             <h3>O espetacular Homem-Aranha</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -86,7 +119,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg" alt="Vingadores: Ultimato">
                         <div class="dsmovie-card-description">
                             <h3>Vingadores: Ultimato</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -96,7 +140,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/cyecB7godJ6kNHGONFjUyVN9OX5.jpg" alt="Homem de Ferro">
                         <div class="dsmovie-card-description">
                             <h3>Homem de Ferro</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -106,7 +161,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/hMn3BsD4s4Y8FV0kbwq8Y88EmCv.jpg" alt="Batman: O Cavaleiro das Trevas">
                         <div class="dsmovie-card-description">
                             <h3>Batman: O Cavaleiro das Trevas</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,7 +182,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/uhYpkLSnlOXTQDmNnu1X4MHMt1S.jpg" alt="Homem-Aranha: Sem Volta Para Casa">
                         <div class="dsmovie-card-description">
                             <h3>Homem-Aranha: Sem Volta Para Casa</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -126,7 +203,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wpI4He62QfRK4F7njzqi0162pKC.jpg" alt="Capitão América: O Primeiro Vingador ">
                         <div class="dsmovie-card-description">
                             <h3>Capitão América: O Primeiro Vingador</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -136,7 +224,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7FWlcZq3r6525LWOcvO9kNWurN1.jpg" alt="Capitão América: Guerra Civil">
                         <div class="dsmovie-card-description">
                             <h3>Capitão América: Guerra Civil</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +245,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/jqwM0nhOLEFI1HHBabwr80Od3TC.jpg" alt="Homem-Aranha no Aranhaverso">
                         <div class="dsmovie-card-description">
                             <h3>Homem-Aranha no Aranhaverso</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,7 +266,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/cinER0ESG0eJ49kXlExM0MEWGxW.jpg" alt="Shang-Chi e a Lenda dos Dez Anéis">
                         <div class="dsmovie-card-description">
                             <h3>Shang-Chi e a Lenda dos Dez Anéis</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-full.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
